<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TableLayout
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	>
    	<TableRow>
    		<TextView
    			android:layout_width="wrap_content"
    			android:layout_height="30dp"
    			/>
    	</TableRow>
    	<TableRow>
			<TextView
				android:layout_width="20dp"
				android:layout_height="wrap_content"
				/>
		    <TextView
		    	android:layout_width="fill_parent"
		    	android:layout_height="fill_parent"
		    	android:gravity="center"
				android:text="@string/lbType"
				/>
			<TextView
				android:layout_width="20dp"
				android:layout_height="wrap_content"
				/>
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
	    		<RadioButton
	    			android:id="@+id/rbTCP"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="TCP"
					android:checked="true"
					/>
	    		<RadioButton
	    			android:id="@+id/rbUDP"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="UDP"
					/>
			</LinearLayout>
    	</TableRow>
    	<TableRow>
			<TextView
				android:layout_width="20dp"
				android:layout_height="wrap_content"
				/>
		    <TextView
		    	android:layout_width="fill_parent"
		    	android:layout_height="fill_parent"
		    	android:gravity="center"
				android:text="@string/lbHost"
				/>
			<TextView
				android:layout_width="20dp"
				android:layout_height="wrap_content"
				/>
		    <EditText
		    	android:id="@+id/host"
		    	android:layout_width="200dp"
				android:layout_height="wrap_content"
				android:text="@string/defHost"
				/>
		</TableRow>
    	<TableRow>
			<TextView
				android:layout_width="20dp"
				android:layout_height="wrap_content"
				/>
		    <TextView
		    	android:layout_width="fill_parent"
		    	android:layout_height="fill_parent"
		    	android:gravity="center"
				android:text="@string/lbPort"
				/>
			<TextView
				android:layout_width="20dp"
				android:layout_height="wrap_content"
				/>
		    <EditText
		    	android:id="@+id/port"
		    	android:layout_width="160dp"
				android:layout_height="wrap_content"
				android:inputType="number"
				android:text="@string/defPort"
				/>
		</TableRow>
    	<TableRow>
    		<TextView
    			android:layout_width="wrap_content"
    			android:layout_height="30dp"
    			/>
    	</TableRow>
		<TableRow>>
			<TextView
				android:layout_width="20dp"
				android:layout_height="wrap_content"
				/>
			<Button
				android:id="@+id/connect"
				android:layout_width="160dp"
				android:layout_height="wrap_content"
				android:text="@string/lbConnect"
				android:layout_span="3"/>
		</TableRow>
    </TableLayout>
</LinearLayout>
